--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "express": "^4.18.2",
     "express-json": "^1.0.0",
     "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
     "mongoose": "^7.5.3",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.1",
@@ -29,5 +30,4 @@
     "jest": "^29.7.0",
     "supertest": "^6.3.3"
   }
-  
 }
